src/parser/ConsolaParser.js
// Generated from ./src/grammar/Consola.g4 by ANTLR 4.13.1
// jshint ignore: start
import antlr4 from 'antlr4';
import ConsolaListener from './ConsolaListener.js';


const atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

const decisionsToDFA = atn.decisionToState.map( (ds, index) => new antlr4.dfa.DFA(ds, index) );

const sharedContextCache = new antlr4.atn.PredictionContextCache();

export default class ConsolaParser extends antlr4.Parser {

    static grammarFileName = "Consola.g4";
    static literalNames = [ null, "'set'", "'get'", "'add'", "'sub'", "'div'", 
                            "'mod'", "'pow'", "'inc'", "'dec'", "'len'", 
                            "'toupper'", "'tolower'", "'echo'", "'print'", 
                            "'alert'", "'mkdir'", "'ls'", "'cd'", "'open'", 
                            "'run'", "'save'", "'load'", "'vars'", "'del'", 
                            "'clear'", "'pause'", "'status'", "'time'", 
                            "'date'", "'version'", "'credits'", "'history'", 
                            "'uuid'", "'slug'", "'note'", "'notes'", "'encode'", 
                            "'decode'", "'template'", "'scaffold'", "'serve'", 
                            "'if'", "'then'", "'eval'", "'exit'", "'-v'", 
                            "'+'", "'-'", "'*'", "'/'", "'%'", "'<'", "'>'", 
                            "'<='", "'>='", "'=='", "'!='", "'('", "')'", 
                            "'='" ];
    static symbolicNames = [ null, "SET", "GET", "ADD", "SUB", "DIV", "MOD", 
                             "POW", "INC", "DEC", "LEN", "TOUPPER", "TOLOWER", 
                             "ECHO", "PRINT", "ALERT", "MKDIR", "LS", "CD", 
                             "OPEN", "RUN", "SAVE", "LOAD", "VARS", "DEL", 
                             "CLEAR", "PAUSE", "STATUS", "TIME", "DATE", 
                             "VERSION", "CREDITS", "HISTORY", "UUID", "SLUG", 
                             "NOTE", "NOTES", "ENCODE", "DECODE", "TEMPLATE", 
                             "SCAFFOLD", "SERVE", "IF", "THEN", "EVAL", 
                             "EXIT", "V_FLAG", "PLUS", "MINUS", "MUL", "DIV_SYM", 
                             "MOD_SYM", "LT", "GT", "LE", "GE", "EQEQ", 
                             "NEQ", "LPAREN", "RPAREN", "EQ", "STRING", 
                             "IDENT", "INT", "WS", "NEWLINE", "COMMENT" ];
    static ruleNames = [ "program", "statement", "setStmt", "getStmt", "mathStmt", 
                         "incStmt", "decStmt", "stringStmt", "fsStmt", "utilStmt", 
                         "templateStmt", "scaffoldStmt", "serveStmt", "ifStmt", 
                         "evalStmt", "simpleStmt", "condition", "relationalOp", 
                         "arg", "expr" ];

    constructor(input) {
        super(input);
        this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
        this.ruleNames = ConsolaParser.ruleNames;
        this.literalNames = ConsolaParser.literalNames;
        this.symbolicNames = ConsolaParser.symbolicNames;
    }

    sempred(localctx, ruleIndex, predIndex) {
    	switch(ruleIndex) {
    	case 19:
    	    		return this.expr_sempred(localctx, predIndex);
        default:
            throw "No predicate with index:" + ruleIndex;
       }
    }

    expr_sempred(localctx, predIndex) {
    	switch(predIndex) {
    		case 0:
    			return this.precpred(this._ctx, 6);
    		case 1:
    			return this.precpred(this._ctx, 5);
    		case 2:
    			return this.precpred(this._ctx, 4);
    		default:
    			throw "No predicate with index:" + predIndex;
    	}
    };




	program() {
	    let localctx = new ProgramContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 0, ConsolaParser.RULE_program);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 46;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while((((_la) & ~0x1f) === 0 && ((1 << _la) & 4294967294) !== 0) || ((((_la - 32)) & ~0x1f) === 0 && ((1 << (_la - 32)) & 161791) !== 0)) {
	            this.state = 40;
	            this.statement();
	            this.state = 42;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            if(_la===65) {
	                this.state = 41;
	                this.match(ConsolaParser.NEWLINE);
	            }

	            this.state = 48;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 49;
	        this.match(ConsolaParser.EOF);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	statement() {
	    let localctx = new StatementContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 2, ConsolaParser.RULE_statement);
	    try {
	        this.state = 65;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 1:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 51;
	            this.setStmt();
	            break;
	        case 2:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 52;
	            this.getStmt();
	            break;
	        case 3:
	        case 4:
	        case 5:
	        case 6:
	        case 7:
	        case 49:
	            this.enterOuterAlt(localctx, 3);
	            this.state = 53;
	            this.mathStmt();
	            break;
	        case 8:
	            this.enterOuterAlt(localctx, 4);
	            this.state = 54;
	            this.incStmt();
	            break;
	        case 9:
	            this.enterOuterAlt(localctx, 5);
	            this.state = 55;
	            this.decStmt();
	            break;
	        case 10:
	        case 11:
	        case 12:
	        case 13:
	        case 14:
	        case 15:
	            this.enterOuterAlt(localctx, 6);
	            this.state = 56;
	            this.stringStmt();
	            break;
	        case 16:
	        case 17:
	        case 18:
	        case 19:
	        case 20:
	        case 21:
	        case 22:
	            this.enterOuterAlt(localctx, 7);
	            this.state = 57;
	            this.fsStmt();
	            break;
	        case 23:
	        case 24:
	        case 25:
	        case 26:
	        case 27:
	        case 28:
	        case 29:
	        case 30:
	        case 31:
	        case 32:
	        case 33:
	        case 34:
	        case 35:
	        case 36:
	        case 37:
	        case 38:
	            this.enterOuterAlt(localctx, 8);
	            this.state = 58;
	            this.utilStmt();
	            break;
	        case 39:
	            this.enterOuterAlt(localctx, 9);
	            this.state = 59;
	            this.templateStmt();
	            break;
	        case 40:
	            this.enterOuterAlt(localctx, 10);
	            this.state = 60;
	            this.scaffoldStmt();
	            break;
	        case 41:
	            this.enterOuterAlt(localctx, 11);
	            this.state = 61;
	            this.serveStmt();
	            break;
	        case 42:
	            this.enterOuterAlt(localctx, 12);
	            this.state = 62;
	            this.ifStmt();
	            break;
	        case 44:
	            this.enterOuterAlt(localctx, 13);
	            this.state = 63;
	            this.evalStmt();
	            break;
	        case 45:
	        case 46:
	            this.enterOuterAlt(localctx, 14);
	            this.state = 64;
	            this.simpleStmt();
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	setStmt() {
	    let localctx = new SetStmtContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 4, ConsolaParser.RULE_setStmt);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 67;
	        this.match(ConsolaParser.SET);
	        this.state = 68;
	        this.match(ConsolaParser.IDENT);
	        this.state = 69;
	        this.match(ConsolaParser.EQ);
	        this.state = 70;
	        this.expr(0);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	getStmt() {
	    let localctx = new GetStmtContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 6, ConsolaParser.RULE_getStmt);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 72;
	        this.match(ConsolaParser.GET);
	        this.state = 73;
	        this.match(ConsolaParser.IDENT);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	mathStmt() {
	    let localctx = new MathStmtContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 8, ConsolaParser.RULE_mathStmt);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 75;
	        _la = this._input.LA(1);
	        if(!((((_la) & ~0x1f) === 0 && ((1 << _la) & 248) !== 0) || _la===49)) {
	        this._errHandler.recoverInline(this);
	        }
	        else {
	        	this._errHandler.reportMatch(this);
	            this.consume();
	        }
	        this.state = 76;
	        this.expr(0);
	        this.state = 77;
	        this.expr(0);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	incStmt() {
	    let localctx = new IncStmtContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 10, ConsolaParser.RULE_incStmt);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 79;
	        this.match(ConsolaParser.INC);
	        this.state = 80;
	        this.match(ConsolaParser.IDENT);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	decStmt() {
	    let localctx = new DecStmtContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 12, ConsolaParser.RULE_decStmt);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 82;
	        this.match(ConsolaParser.DEC);
	        this.state = 83;
	        this.match(ConsolaParser.IDENT);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	stringStmt() {
	    let localctx = new StringStmtContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 14, ConsolaParser.RULE_stringStmt);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 85;
	        _la = this._input.LA(1);
	        if(!((((_la) & ~0x1f) === 0 && ((1 << _la) & 64512) !== 0))) {
	        this._errHandler.recoverInline(this);
	        }
	        else {
	        	this._errHandler.reportMatch(this);
	            this.consume();
	        }
	        this.state = 87; 
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        do {
	            this.state = 86;
	            this.arg();
	            this.state = 89; 
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        } while(((((_la - 61)) & ~0x1f) === 0 && ((1 << (_la - 61)) & 7) !== 0));
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	fsStmt() {
	    let localctx = new FsStmtContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 16, ConsolaParser.RULE_fsStmt);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 91;
	        _la = this._input.LA(1);
	        if(!((((_la) & ~0x1f) === 0 && ((1 << _la) & 8323072) !== 0))) {
	        this._errHandler.recoverInline(this);
	        }
	        else {
	        	this._errHandler.reportMatch(this);
	            this.consume();
	        }
	        this.state = 93; 
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        do {
	            this.state = 92;
	            this.arg();
	            this.state = 95; 
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        } while(((((_la - 61)) & ~0x1f) === 0 && ((1 << (_la - 61)) & 7) !== 0));
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	utilStmt() {
	    let localctx = new UtilStmtContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 18, ConsolaParser.RULE_utilStmt);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 97;
	        _la = this._input.LA(1);
	        if(!(((((_la - 23)) & ~0x1f) === 0 && ((1 << (_la - 23)) & 65535) !== 0))) {
	        this._errHandler.recoverInline(this);
	        }
	        else {
	        	this._errHandler.reportMatch(this);
	            this.consume();
	        }
	        this.state = 101;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(((((_la - 61)) & ~0x1f) === 0 && ((1 << (_la - 61)) & 7) !== 0)) {
	            this.state = 98;
	            this.arg();
	            this.state = 103;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	templateStmt() {
	    let localctx = new TemplateStmtContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 20, ConsolaParser.RULE_templateStmt);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 104;
	        this.match(ConsolaParser.TEMPLATE);
	        this.state = 105;
	        this.match(ConsolaParser.IDENT);
	        this.state = 106;
	        this.match(ConsolaParser.IDENT);
	        this.state = 108;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===62) {
	            this.state = 107;
	            this.match(ConsolaParser.IDENT);
	        }

	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	scaffoldStmt() {
	    let localctx = new ScaffoldStmtContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 22, ConsolaParser.RULE_scaffoldStmt);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 110;
	        this.match(ConsolaParser.SCAFFOLD);
	        this.state = 111;
	        this.match(ConsolaParser.IDENT);
	        this.state = 112;
	        this.match(ConsolaParser.IDENT);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	serveStmt() {
	    let localctx = new ServeStmtContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 24, ConsolaParser.RULE_serveStmt);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 114;
	        this.match(ConsolaParser.SERVE);
	        this.state = 115;
	        this.arg();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	ifStmt() {
	    let localctx = new IfStmtContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 26, ConsolaParser.RULE_ifStmt);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 117;
	        this.match(ConsolaParser.IF);
	        this.state = 118;
	        this.condition();
	        this.state = 119;
	        this.match(ConsolaParser.THEN);
	        this.state = 120;
	        this.statement();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	evalStmt() {
	    let localctx = new EvalStmtContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 28, ConsolaParser.RULE_evalStmt);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 122;
	        this.match(ConsolaParser.EVAL);
	        this.state = 123;
	        this.expr(0);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	simpleStmt() {
	    let localctx = new SimpleStmtContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 30, ConsolaParser.RULE_simpleStmt);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 125;
	        _la = this._input.LA(1);
	        if(!(_la===45 || _la===46)) {
	        this._errHandler.recoverInline(this);
	        }
	        else {
	        	this._errHandler.reportMatch(this);
	            this.consume();
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	condition() {
	    let localctx = new ConditionContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 32, ConsolaParser.RULE_condition);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 127;
	        this.expr(0);
	        this.state = 128;
	        this.relationalOp();
	        this.state = 129;
	        this.expr(0);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	relationalOp() {
	    let localctx = new RelationalOpContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 34, ConsolaParser.RULE_relationalOp);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 131;
	        _la = this._input.LA(1);
	        if(!(((((_la - 52)) & ~0x1f) === 0 && ((1 << (_la - 52)) & 63) !== 0))) {
	        this._errHandler.recoverInline(this);
	        }
	        else {
	        	this._errHandler.reportMatch(this);
	            this.consume();
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	arg() {
	    let localctx = new ArgContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 36, ConsolaParser.RULE_arg);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 133;
	        _la = this._input.LA(1);
	        if(!(((((_la - 61)) & ~0x1f) === 0 && ((1 << (_la - 61)) & 7) !== 0))) {
	        this._errHandler.recoverInline(this);
	        }
	        else {
	        	this._errHandler.reportMatch(this);
	            this.consume();
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}


	expr(_p) {
		if(_p===undefined) {
		    _p = 0;
		}
	    const _parentctx = this._ctx;
	    const _parentState = this.state;
	    let localctx = new ExprContext(this, this._ctx, _parentState);
	    let _prevctx = localctx;
	    const _startState = 38;
	    this.enterRecursionRule(localctx, 38, ConsolaParser.RULE_expr, _p);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 142;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 58:
	            localctx = new ParensContext(this, localctx);
	            this._ctx = localctx;
	            _prevctx = localctx;

	            this.state = 136;
	            this.match(ConsolaParser.LPAREN);
	            this.state = 137;
	            this.expr(0);
	            this.state = 138;
	            this.match(ConsolaParser.RPAREN);
	            break;
	        case 63:
	            localctx = new IntAtomContext(this, localctx);
	            this._ctx = localctx;
	            _prevctx = localctx;
	            this.state = 140;
	            this.match(ConsolaParser.INT);
	            break;
	        case 62:
	            localctx = new IdAtomContext(this, localctx);
	            this._ctx = localctx;
	            _prevctx = localctx;
	            this.state = 141;
	            this.match(ConsolaParser.IDENT);
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	        this._ctx.stop = this._input.LT(-1);
	        this.state = 155;
	        this._errHandler.sync(this);
	        var _alt = this._interp.adaptivePredict(this._input,9,this._ctx)
	        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	            if(_alt===1) {
	                if(this._parseListeners!==null) {
	                    this.triggerExitRuleEvent();
	                }
	                _prevctx = localctx;
	                this.state = 153;
	                this._errHandler.sync(this);
	                var la_ = this._interp.adaptivePredict(this._input,8,this._ctx);
	                switch(la_) {
	                case 1:
	                    localctx = new PowerContext(this, new ExprContext(this, _parentctx, _parentState));
	                    this.pushNewRecursionContext(localctx, _startState, ConsolaParser.RULE_expr);
	                    this.state = 144;
	                    if (!( this.precpred(this._ctx, 6))) {
	                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 6)");
	                    }
	                    this.state = 145;
	                    this.match(ConsolaParser.POW);
	                    this.state = 146;
	                    this.expr(6);
	                    break;

	                case 2:
	                    localctx = new MulDivModContext(this, new ExprContext(this, _parentctx, _parentState));
	                    this.pushNewRecursionContext(localctx, _startState, ConsolaParser.RULE_expr);
	                    this.state = 147;
	                    if (!( this.precpred(this._ctx, 5))) {
	                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 5)");
	                    }
	                    this.state = 148;
	                    _la = this._input.LA(1);
	                    if(!(_la===5 || _la===6 || _la===49)) {
	                    this._errHandler.recoverInline(this);
	                    }
	                    else {
	                    	this._errHandler.reportMatch(this);
	                        this.consume();
	                    }
	                    this.state = 149;
	                    this.expr(6);
	                    break;

	                case 3:
	                    localctx = new AddSubContext(this, new ExprContext(this, _parentctx, _parentState));
	                    this.pushNewRecursionContext(localctx, _startState, ConsolaParser.RULE_expr);
	                    this.state = 150;
	                    if (!( this.precpred(this._ctx, 4))) {
	                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 4)");
	                    }
	                    this.state = 151;
	                    _la = this._input.LA(1);
	                    if(!(_la===47 || _la===48)) {
	                    this._errHandler.recoverInline(this);
	                    }
	                    else {
	                    	this._errHandler.reportMatch(this);
	                        this.consume();
	                    }
	                    this.state = 152;
	                    this.expr(5);
	                    break;

	                } 
	            }
	            this.state = 157;
	            this._errHandler.sync(this);
	            _alt = this._interp.adaptivePredict(this._input,9,this._ctx);
	        }

	    } catch( error) {
	        if(error instanceof antlr4.error.RecognitionException) {
		        localctx.exception = error;
		        this._errHandler.reportError(this, error);
		        this._errHandler.recover(this, error);
		    } else {
		    	throw error;
		    }
	    } finally {
	        this.unrollRecursionContexts(_parentctx)
	    }
	    return localctx;
	}


}
